incresead font size on mobile + fixed body scroll

--- a/web/doc/markdown.css
+++ b/web/doc/markdown.css
@@ -55,7 +55,6 @@
   color: #333;
   line-height: 1.5;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
-  font-size: 14px;
   line-height: 1.5;
   word-wrap: break-word;
 }
@@ -332,11 +331,11 @@
 }
 
 .markdown-body h4 {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .markdown-body h5 {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .markdown-body h5,
@@ -345,7 +344,7 @@
 }
 
 .markdown-body h6 {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .markdown-body p {
@@ -383,7 +382,7 @@
 .markdown-body code,
 .markdown-body pre {
   font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .markdown-body pre {
@@ -479,7 +478,7 @@
 }
 
 .markdown-body .f6 {
-  font-size: 12px!important;
+  font-size: 14px!important;
 }
 
 .markdown-body .lh-condensed {
@@ -720,7 +719,7 @@
 .markdown-body pre {
   background-color: #f6f8fa;
   border-radius: 3px;
-  font-size: 85%;
+  font-size: 100%;
   line-height: 1.45;
   overflow: auto;
   padding: 16px;
